<resources>
    <string name="app_name">My Libraries</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="publisher">Publisher</string>
    <string name="author">Author</string>
    <string name="title">Tittle Book</string>
    <string name="blank_title">blank_title</string>
    <string name="blank_author">blank_author</string>
    <string name="blank_publisher">blank_publisher</string>
    <string name="blank_language">blank_language</string>
    <string name="blank_pages">blank_pages</string>
    <string name="pages">Page</string>
    <string name="year">Year</string>
</resources>
