<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="3dp"
        app:cardElevation="2.5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="6dp"
                android:src="@drawable/ic_book"/>
            <TextView
                android:id="@+id/viewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/icon"
                android:textColor="@color/black"
                android:text="@string/blank_title"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/viewAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_toRightOf="@id/icon"
                android:layout_below="@id/viewTitle"
                android:text="@string/blank_author"
                android:textColor="@color/black"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/viewPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_toRightOf="@id/icon"
                android:layout_below="@id/viewAuthor"
                android:text="@string/blank_publisher"
                android:textColor="@color/black"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/viewLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_toRightOf="@id/icon"
                android:layout_below="@id/viewPublisher"
                android:text="@string/blank_language"
                android:textColor="@color/black"
                android:textSize="12sp"/>
            <RatingBar
                android:id="@+id/viewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/ratingBarStyleSmall"
                android:numStars="5"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/viewPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank_pages"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>